--- a/Workshop_2/Zad2.ipynb
+++ b/Workshop_2/Zad2.ipynb
@@ -580,7 +580,7 @@
    "metadata": {},
    "source": [
     "## Our target - make classification, if person has skin cancer or not\n",
-    "#### Of course, we would like to also compare diffrent classifiers, transformers etc."
+    "#### Of course, we would like to also compare different classifiers, transformers etc."
    ]
   },
   {
