--- a/Workshop_2/Zad2.ipynb
+++ b/Workshop_2/Zad2.ipynb
@@ -682,8 +682,8 @@
     "            current_model = pd.DataFrame([[model.__class__.__name__, sr.__class__.__name__, cat_tran.__class__.__name__, score]], columns=['Classifier', 'Scaler', 'Categorical transformer', 'score'])\n",
     "        \n",
     "            classifiers_df = pd.concat([classifiers_df, current_model])\n",
-    "\n",
-    "            print(inx)\n",
+    "\n",        
+    "            print(i / (len(clfs) * len(scalers) * len(categorical_transformers)) * 100)\n",
     "\n",
     "            inx += 1\n",
     "\n"
