--- a/Workshop_2/Zad2.ipynb
+++ b/Workshop_2/Zad2.ipynb
@@ -665,12 +665,12 @@
     "])\n",
     "\n",
     "for model in clfs:\n",
-    "    for sr in scalers:\n",
+    "    for scaler in scalers:\n",
     "        for cat_tran in categorical_transformers:\n",
     "\n",
     "            sett_dict = {\n",
     "                'preprocessing__column_transforms__categorical': cat_tran,\n",
-    "                'preprocessing__column_transforms__continous': sr,\n",
+    "                'preprocessing__column_transforms__continous': scaler,\n",
     "                'clf': model\n",
     "\n",
     "            }\n",
@@ -679,11 +679,11 @@
     "            main_pipeline.fit(x_train, y_train)\n",
     "            score = main_pipeline.score(x_test, y_test)\n",
     "\n",
-    "            current_model = pd.DataFrame([[model.__class__.__name__, sr.__class__.__name__, cat_tran.__class__.__name__, score]], columns=['Classifier', 'Scaler', 'Categorical transformer', 'score'])\n",
+    "            current_model = pd.DataFrame([[model.__class__.__name__, scaler.__class__.__name__, cat_tran.__class__.__name__, score]], columns=['Classifier', 'Scaler', 'Categorical transformer', 'score'])\n",
     "        \n",
     "            classifiers_df = pd.concat([classifiers_df, current_model])\n",
     "\n",        
-    "            print(i / (len(clfs) * len(scalers) * len(categorical_transformers)) * 100)\n",
+    "            print(str(float((inx / (len(clfs) * len(scalers) * len(categorical_transformers))) * 100)) + '% of process')\n",
     "\n",
     "            inx += 1\n",
     "\n"
